<resources>
    <string name="app_name">Project_A_Cst</string>
    <string name="musicName">本程序有一定几率崩溃 请使用者见谅</string>
    <string name="MusicSingerName">By cst</string>
    <string name="act_mp_time_initial">00:00</string>
    <string name="act_mp_time_total">03:00</string>
    <string name="fragment_mine_local_music">本地音乐</string>
    <string name="fragment_mine_local_music_num">92首</string>
    <string name="fragment_mine_recently_played">最近播放</string>
    <string name="fragment_mine_download">我的下载</string>
    <string name="fragment_mine_self_built_song_list">自建歌单</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ben_di_music">本地音乐</string>
    <string name="my_like_music">我喜欢的单曲</string>
    <string name="my_shou_cang">我的收藏</string>
    <string name="music_list">歌单</string>
    <string name="albumn">专辑</string>
    <string name="singer">歌手</string>
    <string name="login">登录</string>
    <string name="play_all_num">播放全部/共有100首歌</string>
    <string name="re_men_singer">热门歌手</string>
    <string name="more">更多</string>
    <string name="heat">最热</string>
    <string name="all">全部</string>
    <string name="zui_new">最新</string>

</resources>
