<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_weight="12"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@mipmap/mymusic_background"></RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_bendiyinyue"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:orientation="horizontal">

        <ImageView
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:src="@mipmap/ic_mymusic_local_normal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:gravity="center_vertical"
            android:textSize="@dimen/fragment_mine_local_music_text_size"
            android:text="@string/fragment_mine_local_music"
            android:textColor="@android:color/black"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/tv_bendi"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4" />

        <ImageView
            android:scaleY="0.5"
            android:scaleX="0.5"
            android:src="@mipmap/icon_play"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:layout_marginRight="@dimen/fragment_mine_margin_ringt"
        android:layout_marginLeft="@dimen/fragment_mine_margin_left"
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_mine_dividing_line_height" />

    <LinearLayout
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <ImageView
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:src="@mipmap/ic_mymusic_play_normal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/fragment_mine_recently_played"
            android:textColor="@android:color/black"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <TextView
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4" />

        <ImageView
            android:scaleX="0.3"
            android:scaleY="0.3"
            android:src="@mipmap/btn_more_left_arrow_nor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:layout_marginRight="20dp"
        android:layout_marginLeft="50dp"
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_mine_dividing_line_height" />
    <LinearLayout
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <ImageView
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:src="@mipmap/ic_mymusic_download_normal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/fragment_mine_download"
            android:textColor="@android:color/black"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <TextView
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4" />

        <ImageView
            android:scaleX="0.3"
            android:scaleY="0.3"
            android:src="@mipmap/btn_more_left_arrow_nor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>
    <TextView
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_mine_dividing_line_height" />

    <LinearLayout
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/fragment_mine_self_built_song_list"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:gravity="center"
            android:text="新建"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_xihuan"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">
        <ImageView
            android:scaleY="0.8"
            android:scaleX="0.8"
            android:src="@mipmap/ic_mymusic_like"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="11"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginTop="7dp"
                android:text="@string/my_like_music"
                android:textColor="@android:color/black"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
            <TextView
                android:id="@+id/tv_xihuan"
                android:layout_marginBottom="7dp"
                android:text="0首"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
        </LinearLayout>
        <ImageView
            android:scaleX="0.3"
            android:scaleY="0.3"
            android:src="@mipmap/btn_more_left_arrow_nor"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <TextView
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/my_shou_cang"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/music_list"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <TextView
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:background="@android:color/darker_gray"
                android:layout_width="1px"
                android:layout_height="match_parent" />
            <TextView
                android:text="@string/albumn"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <TextView
                android:layout_marginTop="@dimen/fragment_mine_margin_top"
                android:layout_marginBottom="@dimen/fragment_mine_margin_top"
                android:background="@android:color/darker_gray"
                android:layout_width="1px"
                android:layout_height="match_parent" />
            <TextView
                android:text="@string/singer"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <TextView
            android:text="@string/login"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


</LinearLayout>