<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <ImageView
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/mainBlue"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:textColor="@android:color/black"
            android:text="@string/all"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <ImageView
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:src="@mipmap/songlis_one"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <ImageView
            android:layout_weight="10"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_heat_song_list_fragment"
            android:text="@string/heat"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray"
            android:layout_width="1dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_new_song_list_fragment"
            android:text="@string/zui_new"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_song_list_fragment"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
</LinearLayout>